exports[`invalid(1): {\"types\": \"./index.d.ts\", \"exports\": \"./index.js\"} 1`] = `

[Input]
  1 | {"types": "./index.d.ts", "exports": "./index.js"}

`;

exports[`invalid(1): {\"types\": \"./index.d.ts\", \"exports\": \"./index.js\"} 2`] = `

Message:
> 1 | {"types": "./index.d.ts", "exports": "./index.js"}
    |                                      ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(10): {\"exports\": {\"types@1.0.0-K\": \"./index.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types@1.0.0-K": "./index.d.ts", "default": "./index.js"}}

`;

exports[`invalid(10): {\"exports\": {\"types@1.0.0-K\": \"./index.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types@1.0.0-K": "./index.d.ts", "default": "./index.js"}}
    |              ^^^^^^^^^^^^^^^ Versioned type condition \`types@1.0.0-K\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(10): {\"exports\": {\"types@1.0.0-K\": \"./index.d.ts\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types@1.0.0-K": "./index.d.ts", "default": "./index.js"}}
    |                                                          ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(11): {\"exports\": {\"types@1.0.0-01\": \"./index.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types@1.0.0-01": "./index.d.ts", "default": "./index.js"}}

`;

exports[`invalid(11): {\"exports\": {\"types@1.0.0-01\": \"./index.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types@1.0.0-01": "./index.d.ts", "default": "./index.js"}}
    |              ^^^^^^^^^^^^^^^^ Versioned type condition \`types@1.0.0-01\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(11): {\"exports\": {\"types@1.0.0-01\": \"./index.d.ts\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types@1.0.0-01": "./index.d.ts", "default": "./index.js"}}
    |                                                           ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(12): {\"exports\": {\"types@1.0.0-a..b\": \"./index.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types@1.0.0-a..b": "./index.d.ts", "default": "./index.js"}}

`;

exports[`invalid(12): {\"exports\": {\"types@1.0.0-a..b\": \"./index.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types@1.0.0-a..b": "./index.d.ts", "default": "./index.js"}}
    |              ^^^^^^^^^^^^^^^^^^ Versioned type condition \`types@1.0.0-a..b\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(12): {\"exports\": {\"types@1.0.0-a..b\": \"./index.d.ts\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types@1.0.0-a..b": "./index.d.ts", "default": "./index.js"}}
    |                                                             ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(13): {\"exports\": {\"types@1.0.0+foo..bar\": \"./index.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types@1.0.0+foo..bar": "./index.d.ts", "default": "./index.js"}}

`;

exports[`invalid(13): {\"exports\": {\"types@1.0.0+foo..bar\": \"./index.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types@1.0.0+foo..bar": "./index.d.ts", "default": "./index.js"}}
    |              ^^^^^^^^^^^^^^^^^^^^^^ Versioned type condition \`types@1.0.0+foo..bar\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(13): {\"exports\": {\"types@1.0.0+foo..bar\": \"./index.d.ts\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types@1.0.0+foo..bar": "./index.d.ts", "default": "./index.js"}}
    |                                                                 ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(14): {\"exports\": {\"types\": {\"types@v5\": \"./index.d.ts\"}, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"types@v5": "./index.d.ts"}, "default": "./index.js"}}

`;

exports[`invalid(14): {\"exports\": {\"types\": {\"types@v5\": \"./index.d.ts\"}, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"types@v5": "./index.d.ts"}, "default": "./index.js"}}
    |                        ^^^^^^^^^^ Versioned type condition \`types@v5\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(14): {\"exports\": {\"types\": {\"types@v5\": \"./index.d.ts\"}, \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types": {"types@v5": "./index.d.ts"}, "default": "./index.js"}}
    |                                                                ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(15): {\"exports\": {\"types\": \"./index.js\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "./index.js", "default": "./index.js"}}

`;

exports[`invalid(15): {\"exports\": {\"types\": \"./index.js\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "./index.js", "default": "./index.js"}}
    |                       ^^^^^^^^^^^^ The \`types\` condition \`./index.js\` must point at a declaration file ending in \`.d.ts\`, \`.d.mts\`, or \`.d.cts\`.

`;

exports[`invalid(16): {\"exports\": {\"types\": \"./index.ts\", \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "./index.ts", "default": "./index.mjs"}}

`;

exports[`invalid(16): {\"exports\": {\"types\": \"./index.ts\", \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "./index.ts", "default": "./index.mjs"}}
    |                       ^^^^^^^^^^^^ The \`types\` condition \`./index.ts\` must point at a declaration file ending in \`.d.ts\`, \`.d.mts\`, or \`.d.cts\`.

`;

exports[`invalid(17): {\"exports\": {\"types\": \"./index.D.TS\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "./index.D.TS", "default": "./index.js"}}

`;

exports[`invalid(17): {\"exports\": {\"types\": \"./index.D.TS\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "./index.D.TS", "default": "./index.js"}}
    |                       ^^^^^^^^^^^^^^ The \`types\` condition \`./index.D.TS\` must point at a declaration file ending in \`.d.ts\`, \`.d.mts\`, or \`.d.cts\`.

`;

exports[`invalid(18): {\"exports\": {\"types\": null, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": null, "default": "./index.js"}}

`;

exports[`invalid(18): {\"exports\": {\"types\": null, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": null, "default": "./index.js"}}
    |                       ^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(18): {\"exports\": {\"types\": null, \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types": null, "default": "./index.js"}}
    |                                        ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(19): {\"exports\": {\"types\": true, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": true, "default": "./index.js"}}

`;

exports[`invalid(19): {\"exports\": {\"types\": true, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": true, "default": "./index.js"}}
    |                                        ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(2): {\"typings\": \"./index.d.ts\", \"exports\": {\".\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"typings": "./index.d.ts", "exports": {".": "./index.js"}}

`;

exports[`invalid(2): {\"typings\": \"./index.d.ts\", \"exports\": {\".\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"typings": "./index.d.ts", "exports": {".": "./index.js"}}
    |                                              ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(20): {\"exports\": {\"types\": false, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": false, "default": "./index.js"}}

`;

exports[`invalid(20): {\"exports\": {\"types\": false, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": false, "default": "./index.js"}}
    |                                         ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(21): {\"exports\": {\"types\": \"\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "", "default": "./index.js"}}

`;

exports[`invalid(21): {\"exports\": {\"types\": \"\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "", "default": "./index.js"}}
    |                                      ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(22): {\"exports\": {\"types\": [\"\", \"./index.d.ts\"], \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": ["", "./index.d.ts"], "default": "./index.js"}}

`;

exports[`invalid(22): {\"exports\": {\"types\": [\"\", \"./index.d.ts\"], \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": ["", "./index.d.ts"], "default": "./index.js"}}
    |                                                        ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(23): {\"exports\": {\"types\": {\"import\": \"./index.d.ts\", \"browser\": \"./not-a-declaration.js\"}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": "./index.d.ts", "browser": "./not-a-declaration.js"}, "import": "./index.js"}}

`;

exports[`invalid(23): {\"exports\": {\"types\": {\"import\": \"./index.d.ts\", \"browser\": \"./not-a-declaration.js\"}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": "./index.d.ts", "browser": "./not-a-declaration.js"}, "import": "./index.js"}}
    |                                                             ^^^^^^^^^^^^^^^^^^^^^^^^ The \`types\` condition \`./not-a-declaration.js\` must point at a declaration file ending in \`.d.ts\`, \`.d.mts\`, or \`.d.cts\`.

`;

exports[`invalid(24): {\"exports\": {\"types\": {\"default\": \"./legacy.d.ts\", \"types@>=5\": \"./modern.d.ts\"}, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"default": "./legacy.d.ts", "types@>=5": "./modern.d.ts"}, "default": "./index.js"}}

`;

exports[`invalid(24): {\"exports\": {\"types\": {\"default\": \"./legacy.d.ts\", \"types@>=5\": \"./modern.d.ts\"}, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"default": "./legacy.d.ts", "types@>=5": "./modern.d.ts"}, "default": "./index.js"}}
    |                                                    ^^^^^^^^^^^ Versioned type conditions must come before \`types\`, and all type conditions must come before runtime conditions.

`;

exports[`invalid(25): {\"exports\": {\"types\": {\"types\": null, \"default\": \"./fallback.d.ts\"}, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"types": null, "default": "./fallback.d.ts"}, "default": "./index.js"}}

`;

exports[`invalid(25): {\"exports\": {\"types\": {\"types\": null, \"default\": \"./fallback.d.ts\"}, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"types": null, "default": "./fallback.d.ts"}, "default": "./index.js"}}
    |                                 ^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(25): {\"exports\": {\"types\": {\"types\": null, \"default\": \"./fallback.d.ts\"}, \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types": {"types": null, "default": "./fallback.d.ts"}, "default": "./index.js"}}
    |                                                                                 ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(26): {\"exports\": {\"types\": [null, \"./index.d.ts\"], \"default\": [\"./index.js\", \"./fallback.js\"]}} 1`] = `

[Input]
  1 | {"exports": {"types": [null, "./index.d.ts"], "default": ["./index.js", "./fallback.js"]}}

`;

exports[`invalid(26): {\"exports\": {\"types\": [null, \"./index.d.ts\"], \"default\": [\"./index.js\", \"./fallback.js\"]}} 2`] = `

Message:
> 1 | {"exports": {"types": [null, "./index.d.ts"], "default": ["./index.js", "./fallback.js"]}}
    |                       ^^^^^^^^^^^^^^^^^^^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(26): {\"exports\": {\"types\": [null, \"./index.d.ts\"], \"default\": [\"./index.js\", \"./fallback.js\"]}} 3`] = `

Message:
> 1 | {"exports": {"types": [null, "./index.d.ts"], "default": ["./index.js", "./fallback.js"]}}
    |                                                           ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(27): {\"exports\": {\"types\": {\"import\": [null, \"./index.d.ts\"], \"default\": \"./fallback.d.ts\"}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": [null, "./index.d.ts"], "default": "./fallback.d.ts"}, "import": "./index.js"}}

`;

exports[`invalid(27): {\"exports\": {\"types\": {\"import\": [null, \"./index.d.ts\"], \"default\": \"./fallback.d.ts\"}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": [null, "./index.d.ts"], "default": "./fallback.d.ts"}, "import": "./index.js"}}
    |                                                                                                   ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(28): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [null, \"./index.d.mts\"], \"default\": \"./fallback.d.cts\"}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": [null, "./index.d.mts"], "default": "./fallback.d.cts"}, "import": "./index.js"}}

`;

exports[`invalid(28): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [null, \"./index.d.mts\"], \"default\": \"./fallback.d.cts\"}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": [null, "./index.d.mts"], "default": "./fallback.d.cts"}, "import": "./index.js"}}
    |                                                                                                                       ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(29): {\"exports\": {\"types\": {\"import\": {\"default\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": {"default": null}, "default": "./fallback.d.ts"}, "import": "./index.js"}}

`;

exports[`invalid(29): {\"exports\": {\"types\": {\"import\": {\"default\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": {"default": null}, "default": "./fallback.d.ts"}, "import": "./index.js"}}
    |                                                                                              ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(3): {\"exports\": {\"default\": \"./index.js\", \"types\": \"./index.d.ts\"}} 1`] = `

[Input]
  1 | {"exports": {"default": "./index.js", "types": "./index.d.ts"}}

`;

exports[`invalid(3): {\"exports\": {\"default\": \"./index.js\", \"types\": \"./index.d.ts\"}} 2`] = `

Message:
> 1 | {"exports": {"default": "./index.js", "types": "./index.d.ts"}}
    |                                       ^^^^^^^ Versioned type conditions must come before \`types\`, and all type conditions must come before runtime conditions.

`;

exports[`invalid(30): {\"exports\": {\"types\": {\"import\": {\"browser\": \"./browser.d.ts\", \"default\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": {\"node\": \"./index.js\"}}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": {"browser": "./browser.d.ts", "default": null}, "default": "./fallback.d.ts"}, "import": {"node": "./index.js"}}}

`;

exports[`invalid(30): {\"exports\": {\"types\": {\"import\": {\"browser\": \"./browser.d.ts\", \"default\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": {\"node\": \"./index.js\"}}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": {"browser": "./browser.d.ts", "default": null}, "default": "./fallback.d.ts"}, "import": {"node": "./index.js"}}}
    |                                                                                                                                    ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(31): {\"exports\": {\"types\": {\"import\": {\"browser\": \"./browser.d.ts\", \"default\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": {"browser": "./browser.d.ts", "default": null}, "default": "./fallback.d.ts"}, "import": "./index.js"}}

`;

exports[`invalid(31): {\"exports\": {\"types\": {\"import\": {\"browser\": \"./browser.d.ts\", \"default\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": {"browser": "./browser.d.ts", "default": null}, "default": "./fallback.d.ts"}, "import": "./index.js"}}
    |                                                                                                                           ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(32): {\"exports\": {\"types\": {\"import\": {\"node\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": {\"node\": \"./index.js\"}}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": {"node": null}, "default": "./fallback.d.ts"}, "import": {"node": "./index.js"}}}

`;

exports[`invalid(32): {\"exports\": {\"types\": {\"import\": {\"node\": null}, \"default\": \"./fallback.d.ts\"}, \"import\": {\"node\": \"./index.js\"}}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": {"node": null}, "default": "./fallback.d.ts"}, "import": {"node": "./index.js"}}}
    |                                                                                                    ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(33): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"node\": null}, \"default\": \"./fallback.d.cts\"}, \"import\": {\"node\": \"./index.mjs\"}}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": {"node": null}, "default": "./fallback.d.cts"}, "import": {"node": "./index.mjs"}}}

`;

exports[`invalid(33): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"node\": null}, \"default\": \"./fallback.d.cts\"}, \"import\": {\"node\": \"./index.mjs\"}}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": {"node": null}, "default": "./fallback.d.cts"}, "import": {"node": "./index.mjs"}}}
    |                                                                                                                       ^^^^^^^^^^^^^ Exported JavaScript target \`./index.mjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(34): {\"type\": \"module\", \"exports\": {\"types\": \"./index.d.cts\", \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": "./index.d.cts", "default": "./index.mjs"}}

`;

exports[`invalid(34): {\"type\": \"module\", \"exports\": {\"types\": \"./index.d.cts\", \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": "./index.d.cts", "default": "./index.mjs"}}
    |                                         ^^^^^^^^^^^^^^^ Type declaration \`./index.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(35): {\"type\": \"module\", \"exports\": {\"types\": \"./index.d.cts\", \"default\": {\"node\": \"./node.js\", \"browser\": \"./browser.js\"}}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": "./index.d.cts", "default": {"node": "./node.js", "browser": "./browser.js"}}}

`;

exports[`invalid(35): {\"type\": \"module\", \"exports\": {\"types\": \"./index.d.cts\", \"default\": {\"node\": \"./node.js\", \"browser\": \"./browser.js\"}}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": "./index.d.cts", "default": {"node": "./node.js", "browser": "./browser.js"}}}
    |                                         ^^^^^^^^^^^^^^^ Type declaration \`./index.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(36): {\"type\": \"module\", \"exports\": {\"types@>=5\": \"./index.d.cts\", \"types\": \"./index.d.cts\", \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types@>=5": "./index.d.cts", "types": "./index.d.cts", "default": "./index.mjs"}}

`;

exports[`invalid(36): {\"type\": \"module\", \"exports\": {\"types@>=5\": \"./index.d.cts\", \"types\": \"./index.d.cts\", \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types@>=5": "./index.d.cts", "types": "./index.d.cts", "default": "./index.mjs"}}
    |                                             ^^^^^^^^^^^^^^^ Type declaration \`./index.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(36): {\"type\": \"module\", \"exports\": {\"types@>=5\": \"./index.d.cts\", \"types\": \"./index.d.cts\", \"default\": \"./index.mjs\"}} 3`] = `

Message:
> 1 | {"type": "module", "exports": {"types@>=5": "./index.d.cts", "types": "./index.d.cts", "default": "./index.mjs"}}
    |                                                                       ^^^^^^^^^^^^^^^ Type declaration \`./index.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(37): {\"type\": \"commonjs\", \"exports\": {\"types\": \"./index.d.mts\", \"default\": \"./index.cjs\"}} 1`] = `

[Input]
  1 | {"type": "commonjs", "exports": {"types": "./index.d.mts", "default": "./index.cjs"}}

`;

exports[`invalid(37): {\"type\": \"commonjs\", \"exports\": {\"types\": \"./index.d.mts\", \"default\": \"./index.cjs\"}} 2`] = `

Message:
> 1 | {"type": "commonjs", "exports": {"types": "./index.d.mts", "default": "./index.cjs"}}
    |                                           ^^^^^^^^^^^^^^^ Type declaration \`./index.d.mts\` uses ES module format but its JavaScript target uses CommonJS format.

`;

exports[`invalid(38): {\"exports\": {\"types\": \"./index.d.ts\", \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "./index.d.ts", "default": "./index.mjs"}}

`;

exports[`invalid(38): {\"exports\": {\"types\": \"./index.d.ts\", \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "./index.d.ts", "default": "./index.mjs"}}
    |                       ^^^^^^^^^^^^^^ Type declaration \`./index.d.ts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(39): {\"exports\": {\".\": {\"types\": \"./index.d.ts\", \"default\": \"./index.js\"}, \"./feature\": \"./feature.js\"}} 1`] = `

[Input]
  1 | {"exports": {".": {"types": "./index.d.ts", "default": "./index.js"}, "./feature": "./feature.js"}}

`;

exports[`invalid(39): {\"exports\": {\".\": {\"types\": \"./index.d.ts\", \"default\": \"./index.js\"}, \"./feature\": \"./feature.js\"}} 2`] = `

Message:
> 1 | {"exports": {".": {"types": "./index.d.ts", "default": "./index.js"}, "./feature": "./feature.js"}}
    |                                                                                    ^^^^^^^^^^^^^^ Exported JavaScript target \`./feature.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(4): {\"exports\": {\"default\": \"./index.mjs\", \"types@>=5\": \"./index.d.mts\"}} 1`] = `

[Input]
  1 | {"exports": {"default": "./index.mjs", "types@>=5": "./index.d.mts"}}

`;

exports[`invalid(4): {\"exports\": {\"default\": \"./index.mjs\", \"types@>=5\": \"./index.d.mts\"}} 2`] = `

Message:
> 1 | {"exports": {"default": "./index.mjs", "types@>=5": "./index.d.mts"}}
    |                                        ^^^^^^^^^^^ Versioned type conditions must come before \`types\`, and all type conditions must come before runtime conditions.

`;

exports[`invalid(40): {\"types\": \"./index.d.ts\", \"exports\": [{\"default\": \"./index.js\"}, {\"types\": \"./index.d.ts\"}]} 1`] = `

[Input]
  1 | {"types": "./index.d.ts", "exports": [{"default": "./index.js"}, {"types": "./index.d.ts"}]}

`;

exports[`invalid(40): {\"types\": \"./index.d.ts\", \"exports\": [{\"default\": \"./index.js\"}, {\"types\": \"./index.d.ts\"}]} 2`] = `

Message:
> 1 | {"types": "./index.d.ts", "exports": [{"default": "./index.js"}, {"types": "./index.d.ts"}]}
    |                                                   ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(41): {\"types\": \"./index.d.ts\", \"exports\": {\"import\": {\"types\": \"./index.d.mts\", \"default\": \"./index.mjs\"}, \"require\": \"./index.cjs\"}} 1`] = `

[Input]
  1 | {"types": "./index.d.ts", "exports": {"import": {"types": "./index.d.mts", "default": "./index.mjs"}, "require": "./index.cjs"}}

`;

exports[`invalid(41): {\"types\": \"./index.d.ts\", \"exports\": {\"import\": {\"types\": \"./index.d.mts\", \"default\": \"./index.mjs\"}, \"require\": \"./index.cjs\"}} 2`] = `

Message:
> 1 | {"types": "./index.d.ts", "exports": {"import": {"types": "./index.d.mts", "default": "./index.mjs"}, "require": "./index.cjs"}}
    |                                                                                                                  ^^^^^^^^^^^^^ Exported JavaScript target \`./index.cjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(42): {\"exports\": {\"import\": {\"types\": \"./index.d.mts\", \"default\": \"./index.mjs\"}, \"require\": {\"default\": \"./index.cjs\"}}} 1`] = `

[Input]
  1 | {"exports": {"import": {"types": "./index.d.mts", "default": "./index.mjs"}, "require": {"default": "./index.cjs"}}}

`;

exports[`invalid(42): {\"exports\": {\"import\": {\"types\": \"./index.d.mts\", \"default\": \"./index.mjs\"}, \"require\": {\"default\": \"./index.cjs\"}}} 2`] = `

Message:
> 1 | {"exports": {"import": {"types": "./index.d.mts", "default": "./index.mjs"}, "require": {"default": "./index.cjs"}}}
    |                                                                                                     ^^^^^^^^^^^^^ Exported JavaScript target \`./index.cjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(43): {\"exports\": {\"types\": {\"import\": \"./import.d.ts\"}, \"import\": \"./import.js\", \"require\": \"./require.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": "./import.d.ts"}, "import": "./import.js", "require": "./require.js"}}

`;

exports[`invalid(43): {\"exports\": {\"types\": {\"import\": \"./import.d.ts\"}, \"import\": \"./import.js\", \"require\": \"./require.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": "./import.d.ts"}, "import": "./import.js", "require": "./require.js"}}
    |                                                                                        ^^^^^^^^^^^^^^ Exported JavaScript target \`./require.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(44): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": \"./import.d.cts\", \"require\": \"./require.d.cts\"}, \"import\": \"./import.mjs\", \"require\": \"./require.cjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": "./import.d.cts", "require": "./require.d.cts"}, "import": "./import.mjs", "require": "./require.cjs"}}

`;

exports[`invalid(44): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": \"./import.d.cts\", \"require\": \"./require.d.cts\"}, \"import\": \"./import.mjs\", \"require\": \"./require.cjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": "./import.d.cts", "require": "./require.d.cts"}, "import": "./import.mjs", "require": "./require.cjs"}}
    |                                                    ^^^^^^^^^^^^^^^^ Type declaration \`./import.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(45): {\n\t\"exports\": {\n\t\t\"types@>=5.2\": {\"import\": \"./import.d.ts\"},\n\t\t\"types@>=4.7\": {\"require\": \"./require.d.ts\"},\n\t\t\"import\": \"./import.js\",\n\t\t\"require\": \"./require.js\"\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"exports": {
  3 | 		"types@>=5.2": {"import": "./import.d.ts"},
  4 | 		"types@>=4.7": {"require": "./require.d.ts"},
  5 | 		"import": "./import.js",
  6 | 		"require": "./require.js"
  7 | 	}
  8 | }

`;

exports[`invalid(45): {\n\t\"exports\": {\n\t\t\"types@>=5.2\": {\"import\": \"./import.d.ts\"},\n\t\t\"types@>=4.7\": {\"require\": \"./require.d.ts\"},\n\t\t\"import\": \"./import.js\",\n\t\t\"require\": \"./require.js\"\n\t}\n} 2`] = `

Message:
  1 | {
  2 | 	"exports": {
  3 | 		"types@>=5.2": {"import": "./import.d.ts"},
  4 | 		"types@>=4.7": {"require": "./require.d.ts"},
> 5 | 		"import": "./import.js",
    | 		          ^^^^^^^^^^^^^ Exported JavaScript target \`./import.js\` has no corresponding \`types\` condition.
  6 | 		"require": "./require.js"
  7 | 	}
  8 | }

`;

exports[`invalid(45): {\n\t\"exports\": {\n\t\t\"types@>=5.2\": {\"import\": \"./import.d.ts\"},\n\t\t\"types@>=4.7\": {\"require\": \"./require.d.ts\"},\n\t\t\"import\": \"./import.js\",\n\t\t\"require\": \"./require.js\"\n\t}\n} 3`] = `

Message:
  1 | {
  2 | 	"exports": {
  3 | 		"types@>=5.2": {"import": "./import.d.ts"},
  4 | 		"types@>=4.7": {"require": "./require.d.ts"},
  5 | 		"import": "./import.js",
> 6 | 		"require": "./require.js"
    | 		           ^^^^^^^^^^^^^^ Exported JavaScript target \`./require.js\` has no corresponding \`types\` condition.
  7 | 	}
  8 | }

`;

exports[`invalid(46): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"browser\": \"./browser.d.mts\"}, \"default\": \"./fallback.d.cts\"}, \"import\": {\"browser\": \"./browser.mjs\", \"node\": \"./node.js\"}}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": {"browser": "./browser.d.mts"}, "default": "./fallback.d.cts"}, "import": {"browser": "./browser.mjs", "node": "./node.js"}}}

`;

exports[`invalid(46): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"browser\": \"./browser.d.mts\"}, \"default\": \"./fallback.d.cts\"}, \"import\": {\"browser\": \"./browser.mjs\", \"node\": \"./node.js\"}}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": {"browser": "./browser.d.mts"}, "default": "./fallback.d.cts"}, "import": {"browser": "./browser.mjs", "node": "./node.js"}}}
    |                                                                                               ^^^^^^^^^^^^^^^^^^ Type declaration \`./fallback.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(47): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"default\": \"./index.d.cts\"}}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": {"default": "./index.d.cts"}}, "import": "./index.js"}}

`;

exports[`invalid(47): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"default\": \"./index.d.cts\"}}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": {"default": "./index.d.cts"}}, "import": "./index.js"}}
    |                                                                ^^^^^^^^^^^^^^^ Type declaration \`./index.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(48): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": \"./fallback.d.cts\"}, \"import\": \"./import.js\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": [], "default": "./fallback.d.cts"}, "import": "./import.js"}}

`;

exports[`invalid(48): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": \"./fallback.d.cts\"}, \"import\": \"./import.js\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": [], "default": "./fallback.d.cts"}, "import": "./import.js"}}
    |                                                                   ^^^^^^^^^^^^^^^^^^ Type declaration \`./fallback.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(49): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": {\"import\": \"./fallback.d.cts\"}}, \"import\": \"./import.js\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": [], "default": {"import": "./fallback.d.cts"}}, "import": "./import.js"}}

`;

exports[`invalid(49): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": {\"import\": \"./fallback.d.cts\"}}, \"import\": \"./import.js\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": [], "default": {"import": "./fallback.d.cts"}}, "import": "./import.js"}}
    |                                                                              ^^^^^^^^^^^^^^^^^^ Type declaration \`./fallback.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(5): {\"exports\": {\"types@>=5\": \"./index.d.ts\", \"default\": \"./index.js\", \"types@>=4\": \"./index.d.ts\"}} 1`] = `

[Input]
  1 | {"exports": {"types@>=5": "./index.d.ts", "default": "./index.js", "types@>=4": "./index.d.ts"}}

`;

exports[`invalid(5): {\"exports\": {\"types@>=5\": \"./index.d.ts\", \"default\": \"./index.js\", \"types@>=4\": \"./index.d.ts\"}} 2`] = `

Message:
> 1 | {"exports": {"types@>=5": "./index.d.ts", "default": "./index.js", "types@>=4": "./index.d.ts"}}
    |                                                                    ^^^^^^^^^^^ Versioned type conditions must come before \`types\`, and all type conditions must come before runtime conditions.

`;

exports[`invalid(50): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": {\"node\": \"./fallback.d.cts\"}}, \"import\": {\"node\": \"./node.js\"}}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": [], "default": {"node": "./fallback.d.cts"}}, "import": {"node": "./node.js"}}}

`;

exports[`invalid(50): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": {\"node\": \"./fallback.d.cts\"}}, \"import\": {\"node\": \"./node.js\"}}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": [], "default": {"node": "./fallback.d.cts"}}, "import": {"node": "./node.js"}}}
    |                                                                            ^^^^^^^^^^^^^^^^^^ Type declaration \`./fallback.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(51): {\"type\": \"module\", \"exports\": {\"types\": {\"types@>=5\": [], \"types\": {\"import\": \"./import.d.mts\", \"require\": \"./require.d.cts\"}}, \"import\": \"./import.mjs\", \"require\": \"./require.cjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"types@>=5": [], "types": {"import": "./import.d.mts", "require": "./require.d.cts"}}, "import": "./import.mjs", "require": "./require.cjs"}}

`;

exports[`invalid(51): {\"type\": \"module\", \"exports\": {\"types\": {\"types@>=5\": [], \"types\": {\"import\": \"./import.d.mts\", \"require\": \"./require.d.cts\"}}, \"import\": \"./import.mjs\", \"require\": \"./require.cjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"types@>=5": [], "types": {"import": "./import.d.mts", "require": "./require.d.cts"}}, "import": "./import.mjs", "require": "./require.cjs"}}
    |                                                       ^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(52): {\"exports\": {\"types\": {\"import\": {\"node\": \"./node.d.ts\"}}, \"import\": {\"node\": \"./node.js\", \"browser\": \"./browser.js\"}}} 1`] = `

[Input]
  1 | {"exports": {"types": {"import": {"node": "./node.d.ts"}}, "import": {"node": "./node.js", "browser": "./browser.js"}}}

`;

exports[`invalid(52): {\"exports\": {\"types\": {\"import\": {\"node\": \"./node.d.ts\"}}, \"import\": {\"node\": \"./node.js\", \"browser\": \"./browser.js\"}}} 2`] = `

Message:
> 1 | {"exports": {"types": {"import": {"node": "./node.d.ts"}}, "import": {"node": "./node.js", "browser": "./browser.js"}}}
    |                                                                                                       ^^^^^^^^^^^^^^ Exported JavaScript target \`./browser.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(53): {\"exports\": {\"types@>=5\": {\"import\": {\"node\": \"./node.d.ts\"}}, \"import\": {\"node\": \"./node.js\", \"browser\": \"./browser.js\"}}} 1`] = `

[Input]
  1 | {"exports": {"types@>=5": {"import": {"node": "./node.d.ts"}}, "import": {"node": "./node.js", "browser": "./browser.js"}}}

`;

exports[`invalid(53): {\"exports\": {\"types@>=5\": {\"import\": {\"node\": \"./node.d.ts\"}}, \"import\": {\"node\": \"./node.js\", \"browser\": \"./browser.js\"}}} 2`] = `

Message:
> 1 | {"exports": {"types@>=5": {"import": {"node": "./node.d.ts"}}, "import": {"node": "./node.js", "browser": "./browser.js"}}}
    |                                                                                                           ^^^^^^^^^^^^^^ Exported JavaScript target \`./browser.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(54): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": {\"import\": {\"node\": \"./fallback.d.cts\"}}}, \"import\": {\"node\": \"./node.js\"}}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": [], "default": {"import": {"node": "./fallback.d.cts"}}}, "import": {"node": "./node.js"}}}

`;

exports[`invalid(54): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": {\"import\": {\"node\": \"./fallback.d.cts\"}}}, \"import\": {\"node\": \"./node.js\"}}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": [], "default": {"import": {"node": "./fallback.d.cts"}}}, "import": {"node": "./node.js"}}}
    |                                                                                       ^^^^^^^^^^^^^^^^^^ Type declaration \`./fallback.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(55): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": {\"import\": [], \"default\": \"./fallback.d.cts\"}}, \"import\": {\"node\": \"./node.js\"}}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": [], "default": {"import": [], "default": "./fallback.d.cts"}}, "import": {"node": "./node.js"}}}

`;

exports[`invalid(55): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": [], \"default\": {\"import\": [], \"default\": \"./fallback.d.cts\"}}, \"import\": {\"node\": \"./node.js\"}}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": [], "default": {"import": [], "default": "./fallback.d.cts"}}, "import": {"node": "./node.js"}}}
    |                                                                                             ^^^^^^^^^^^^^^^^^^ Type declaration \`./fallback.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(56): {\"exports\": {\"types@>=5 ||   || <4\": \"./index.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types@>=5 ||   || <4": "./index.d.ts", "default": "./index.js"}}

`;

exports[`invalid(56): {\"exports\": {\"types@>=5 ||   || <4\": \"./index.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types@>=5 ||   || <4": "./index.d.ts", "default": "./index.js"}}
    |              ^^^^^^^^^^^^^^^^^^^^^^ Versioned type condition \`types@>=5 ||   || <4\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(56): {\"exports\": {\"types@>=5 ||   || <4\": \"./index.d.ts\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types@>=5 ||   || <4": "./index.d.ts", "default": "./index.js"}}
    |                                                                 ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(57): {\"exports\": {\"types\": \"./fallback.d.ts\", \"types@>=5\": \"./modern.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": "./fallback.d.ts", "types@>=5": "./modern.d.ts", "default": "./index.js"}}

`;

exports[`invalid(57): {\"exports\": {\"types\": \"./fallback.d.ts\", \"types@>=5\": \"./modern.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": "./fallback.d.ts", "types@>=5": "./modern.d.ts", "default": "./index.js"}}
    |                                          ^^^^^^^^^^^ Versioned type conditions must come before \`types\`, and all type conditions must come before runtime conditions.

`;

exports[`invalid(58): {\"type\": \"module\", \"exports\": {\"types@invalid\": \"./invalid.cjs\", \"types\": \"./index.d.mts\", \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types@invalid": "./invalid.cjs", "types": "./index.d.mts", "default": "./index.mjs"}}

`;

exports[`invalid(58): {\"type\": \"module\", \"exports\": {\"types@invalid\": \"./invalid.cjs\", \"types\": \"./index.d.mts\", \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types@invalid": "./invalid.cjs", "types": "./index.d.mts", "default": "./index.mjs"}}
    |                                ^^^^^^^^^^^^^^^ Versioned type condition \`types@invalid\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(59): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"types\": null}, \"default\": \"./fallback.d.cts\"}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": {"types": null}, "default": "./fallback.d.cts"}, "import": "./index.js"}}

`;

exports[`invalid(59): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"types\": null}, \"default\": \"./fallback.d.cts\"}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": {"types": null}, "default": "./fallback.d.cts"}, "import": "./index.js"}}
    |                                                              ^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(59): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"types\": null}, \"default\": \"./fallback.d.cts\"}, \"import\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": {"types": null}, "default": "./fallback.d.cts"}, "import": "./index.js"}}
    |                                                                                                               ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(6): {\"exports\": {\"import\": {\"default\": \"./index.js\", \"types\": \"./index.d.ts\"}}} 1`] = `

[Input]
  1 | {"exports": {"import": {"default": "./index.js", "types": "./index.d.ts"}}}

`;

exports[`invalid(6): {\"exports\": {\"import\": {\"default\": \"./index.js\", \"types\": \"./index.d.ts\"}}} 2`] = `

Message:
> 1 | {"exports": {"import": {"default": "./index.js", "types": "./index.d.ts"}}}
    |                                                  ^^^^^^^ Versioned type conditions must come before \`types\`, and all type conditions must come before runtime conditions.

`;

exports[`invalid(60): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"types\": [], \"default\": null}, \"default\": \"./fallback.d.cts\"}, \"import\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"import": {"types": [], "default": null}, "default": "./fallback.d.cts"}, "import": "./index.js"}}

`;

exports[`invalid(60): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"types\": [], \"default\": null}, \"default\": \"./fallback.d.cts\"}, \"import\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": {"types": [], "default": null}, "default": "./fallback.d.cts"}, "import": "./index.js"}}
    |                                                              ^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(60): {\"type\": \"module\", \"exports\": {\"types\": {\"import\": {\"types\": [], \"default\": null}, \"default\": \"./fallback.d.cts\"}, \"import\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"import": {"types": [], "default": null}, "default": "./fallback.d.cts"}, "import": "./index.js"}}
    |                                                                                                                              ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(61): {\"type\": \"module\", \"exports\": {\"types@>=5\": {\"import\": null, \"require\": \"./r.d.cts\"}, \"types\": {\"import\": \"./i.d.mts\", \"require\": \"./r.d.cts\"}, \"import\": \"./i.mjs\", \"require\": \"./r.cjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types@>=5": {"import": null, "require": "./r.d.cts"}, "types": {"import": "./i.d.mts", "require": "./r.d.cts"}, "import": "./i.mjs", "require": "./r.cjs"}}

`;

exports[`invalid(61): {\"type\": \"module\", \"exports\": {\"types@>=5\": {\"import\": null, \"require\": \"./r.d.cts\"}, \"types\": {\"import\": \"./i.d.mts\", \"require\": \"./r.d.cts\"}, \"import\": \"./i.mjs\", \"require\": \"./r.cjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types@>=5": {"import": null, "require": "./r.d.cts"}, "types": {"import": "./i.d.mts", "require": "./r.d.cts"}, "import": "./i.mjs", "require": "./r.cjs"}}
    |                                                                                                                                                           ^^^^^^^^^ Exported JavaScript target \`./i.mjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(62): {\"exports\": {\"types\": 1, \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types": 1, "default": "./index.js"}}

`;

exports[`invalid(62): {\"exports\": {\"types\": 1, \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types": 1, "default": "./index.js"}}
    |                                     ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(63): {\"type\": \"module\", \"exports\": {\"types\": {\"types\": null, \"default\": \"./fallback.d.cts\"}, \"default\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"types": null, "default": "./fallback.d.cts"}, "default": "./index.mjs"}}

`;

exports[`invalid(63): {\"type\": \"module\", \"exports\": {\"types\": {\"types\": null, \"default\": \"./fallback.d.cts\"}, \"default\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"types": null, "default": "./fallback.d.cts"}, "default": "./index.mjs"}}
    |                                                   ^^^^ The \`types\` condition must point to a declaration file.

`;

exports[`invalid(63): {\"type\": \"module\", \"exports\": {\"types\": {\"types\": null, \"default\": \"./fallback.d.cts\"}, \"default\": \"./index.mjs\"}} 3`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"types": null, "default": "./fallback.d.cts"}, "default": "./index.mjs"}}
    |                                                                                                    ^^^^^^^^^^^^^ Exported JavaScript target \`./index.mjs\` has no corresponding \`types\` condition.

`;

exports[`invalid(64): {\"type\": \"module\", \"exports\": {\"types\": {\"default\": {\"import\": \"./import.d.cts\", \"default\": \"./fallback.d.cts\"}}, \"default\": {\"import\": \"./import.mjs\", \"default\": \"./fallback.cjs\"}}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"default": {"import": "./import.d.cts", "default": "./fallback.d.cts"}}, "default": {"import": "./import.mjs", "default": "./fallback.cjs"}}}

`;

exports[`invalid(64): {\"type\": \"module\", \"exports\": {\"types\": {\"default\": {\"import\": \"./import.d.cts\", \"default\": \"./fallback.d.cts\"}}, \"default\": {\"import\": \"./import.mjs\", \"default\": \"./fallback.cjs\"}}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"default": {"import": "./import.d.cts", "default": "./fallback.d.cts"}}, "default": {"import": "./import.mjs", "default": "./fallback.cjs"}}}
    |                                                                ^^^^^^^^^^^^^^^^ Type declaration \`./import.d.cts\` uses CommonJS format but its JavaScript target uses ES module format.

`;

exports[`invalid(65): {\"exports\": {\"types\": {\"default\": {\"import\": \"./import.d.ts\"}}, \"default\": {\"import\": \"./import.js\", \"require\": \"./require.js\"}}} 1`] = `

[Input]
  1 | {"exports": {"types": {"default": {"import": "./import.d.ts"}}, "default": {"import": "./import.js", "require": "./require.js"}}}

`;

exports[`invalid(65): {\"exports\": {\"types\": {\"default\": {\"import\": \"./import.d.ts\"}}, \"default\": {\"import\": \"./import.js\", \"require\": \"./require.js\"}}} 2`] = `

Message:
> 1 | {"exports": {"types": {"default": {"import": "./import.d.ts"}}, "default": {"import": "./import.js", "require": "./require.js"}}}
    |                                                                                                                 ^^^^^^^^^^^^^^ Exported JavaScript target \`./require.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(66): {\"type\": \"module\", \"exports\": {\"types\": {\"default\": {\"import\": \"./import.d.mts\", \"default\": \"./fallback.d.mts\"}}, \"default\": {\"import\": \"./import.mjs\", \"default\": \"./fallback.cjs\"}}} 1`] = `

[Input]
  1 | {"type": "module", "exports": {"types": {"default": {"import": "./import.d.mts", "default": "./fallback.d.mts"}}, "default": {"import": "./import.mjs", "default": "./fallback.cjs"}}}

`;

exports[`invalid(66): {\"type\": \"module\", \"exports\": {\"types\": {\"default\": {\"import\": \"./import.d.mts\", \"default\": \"./fallback.d.mts\"}}, \"default\": {\"import\": \"./import.mjs\", \"default\": \"./fallback.cjs\"}}} 2`] = `

Message:
> 1 | {"type": "module", "exports": {"types": {"default": {"import": "./import.d.mts", "default": "./fallback.d.mts"}}, "default": {"import": "./import.mjs", "default": "./fallback.cjs"}}}
    |                                                                                             ^^^^^^^^^^^^^^^^^^ Type declaration \`./fallback.d.mts\` uses ES module format but its JavaScript target uses CommonJS format.

`;

exports[`invalid(7): {\"exports\": {\"types@invalid\": \"./index.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types@invalid": "./index.d.ts", "default": "./index.js"}}

`;

exports[`invalid(7): {\"exports\": {\"types@invalid\": \"./index.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types@invalid": "./index.d.ts", "default": "./index.js"}}
    |              ^^^^^^^^^^^^^^^ Versioned type condition \`types@invalid\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(7): {\"exports\": {\"types@invalid\": \"./index.d.ts\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types@invalid": "./index.d.ts", "default": "./index.js"}}
    |                                                          ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(8): {\"exports\": {\"types@v5\": \"./index.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types@v5": "./index.d.ts", "default": "./index.js"}}

`;

exports[`invalid(8): {\"exports\": {\"types@v5\": \"./index.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types@v5": "./index.d.ts", "default": "./index.js"}}
    |              ^^^^^^^^^^ Versioned type condition \`types@v5\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(8): {\"exports\": {\"types@v5\": \"./index.d.ts\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types@v5": "./index.d.ts", "default": "./index.js"}}
    |                                                     ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;

exports[`invalid(9): {\"exports\": {\"types@>= 5\": \"./index.d.ts\", \"default\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"types@>= 5": "./index.d.ts", "default": "./index.js"}}

`;

exports[`invalid(9): {\"exports\": {\"types@>= 5\": \"./index.d.ts\", \"default\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"types@>= 5": "./index.d.ts", "default": "./index.js"}}
    |              ^^^^^^^^^^^^ Versioned type condition \`types@>= 5\` must use TypeScript-compatible semver syntax.

`;

exports[`invalid(9): {\"exports\": {\"types@>= 5\": \"./index.d.ts\", \"default\": \"./index.js\"}} 3`] = `

Message:
> 1 | {"exports": {"types@>= 5": "./index.d.ts", "default": "./index.js"}}
    |                                                       ^^^^^^^^^^^^ Exported JavaScript target \`./index.js\` has no corresponding \`types\` condition.

`;
